<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10117" systemVersion="15G31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
    <dependencies>
        <deployment identifier="iOS"/>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
    </dependencies>
    <customFonts key="customFonts">
        <mutableArray key="Exo2-Bold.ttf">
            <string>Exo2-Bold</string>
        </mutableArray>
        <mutableArray key="Exo2-Regular.ttf">
            <string>Exo2-Regular</string>
            <string>Exo2-Regular</string>
        </mutableArray>
        <mutableArray key="Exo2-SemiBold.ttf">
            <string>Exo2-SemiBold</string>
        </mutableArray>
    </customFonts>
    <objects>
        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="LoginViewController">
            <connections>
                <outlet property="btnExit" destination="zro-8R-n0h" id="LBx-7Y-L3q"/>
                <outlet property="btnLogin" destination="t06-7j-ZU0" id="O3n-Pe-4eX"/>
                <outlet property="txtPassword" destination="6Qr-NF-gkm" id="cxB-IY-HvN"/>
                <outlet property="txtUsername" destination="lea-yB-1C5" id="KCQ-mR-vaW"/>
                <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
            </connections>
        </placeholder>
        <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
        <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
            <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
            <subviews>
                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="USER LOGIN" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eZ4-YJ-qej">
                    <rect key="frame" x="140" y="35" width="95" height="21"/>
                    <fontDescription key="fontDescription" name="Exo2-Bold" family="Exo 2" pointSize="17"/>
                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                    <nil key="highlightedColor"/>
                </label>
                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="349-as-ryg">
                    <rect key="frame" x="8" y="104" width="359" height="85"/>
                    <subviews>
                        <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Username" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="lea-yB-1C5">
                            <rect key="frame" x="8" y="9" width="343" height="30"/>
                            <fontDescription key="fontDescription" name="Exo2-Regular" family="Exo 2" pointSize="14"/>
                            <textInputTraits key="textInputTraits"/>
                        </textField>
                        <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="6Qr-NF-gkm">
                            <rect key="frame" x="8" y="47" width="343" height="30"/>
                            <fontDescription key="fontDescription" name="Exo2-Regular" family="Exo 2" pointSize="14"/>
                            <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
                        </textField>
                    </subviews>
                    <constraints>
                        <constraint firstItem="6Qr-NF-gkm" firstAttribute="leading" secondItem="lea-yB-1C5" secondAttribute="leading" id="0SB-6r-QnL"/>
                        <constraint firstItem="lea-yB-1C5" firstAttribute="trailing" secondItem="349-as-ryg" secondAttribute="trailingMargin" id="KkH-Cb-Zzw"/>
                        <constraint firstItem="lea-yB-1C5" firstAttribute="top" secondItem="349-as-ryg" secondAttribute="top" constant="9" id="YRJ-k6-9DR"/>
                        <constraint firstItem="6Qr-NF-gkm" firstAttribute="top" secondItem="lea-yB-1C5" secondAttribute="bottom" constant="8" symbolic="YES" id="cFg-wl-qo9"/>
                        <constraint firstItem="6Qr-NF-gkm" firstAttribute="trailing" secondItem="lea-yB-1C5" secondAttribute="trailing" id="fBc-pe-d0J"/>
                        <constraint firstItem="lea-yB-1C5" firstAttribute="leading" secondItem="349-as-ryg" secondAttribute="leadingMargin" id="vvk-F6-1uw"/>
                    </constraints>
                </view>
                <button opaque="NO" alpha="0.75" contentMode="scaleToFill" verticalCompressionResistancePriority="749" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zro-8R-n0h">
                    <rect key="frame" x="168" y="596" width="38" height="38"/>
                    <constraints>
                        <constraint firstAttribute="height" constant="38" id="BBk-D2-slT"/>
                        <constraint firstAttribute="width" constant="38" id="kte-jW-0mP"/>
                    </constraints>
                    <state key="normal" title="Button" image="exit_icon.png"/>
                    <connections>
                        <action selector="btnExitClicked:" destination="-1" eventType="touchUpInside" id="iRa-6O-e7v"/>
                    </connections>
                </button>
                <button opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="248" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="t06-7j-ZU0">
                    <rect key="frame" x="8" y="191" width="359" height="29"/>
                    <color key="backgroundColor" red="1" green="0.87505212970000001" blue="0.034291263689999997" alpha="1" colorSpace="calibratedRGB"/>
                    <fontDescription key="fontDescription" name="Exo2-SemiBold" family="Exo 2" pointSize="14"/>
                    <state key="normal" title="LOGIN">
                        <color key="titleColor" cocoaTouchSystemColor="darkTextColor"/>
                    </state>
                    <connections>
                        <action selector="btnLoginClicked:" destination="-1" eventType="touchUpInside" id="9iG-u2-yFH"/>
                    </connections>
                </button>
            </subviews>
            <color key="backgroundColor" red="1" green="0.87505212970000001" blue="0.034291263689999997" alpha="1" colorSpace="calibratedRGB"/>
            <constraints>
                <constraint firstAttribute="bottom" secondItem="zro-8R-n0h" secondAttribute="bottom" constant="33" id="5Lc-l7-4Om"/>
                <constraint firstItem="t06-7j-ZU0" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leadingMargin" id="5ls-Zm-8vV"/>
                <constraint firstItem="zro-8R-n0h" firstAttribute="centerX" secondItem="349-as-ryg" secondAttribute="centerX" id="5p5-YA-cc2"/>
                <constraint firstItem="zro-8R-n0h" firstAttribute="centerX" secondItem="t06-7j-ZU0" secondAttribute="centerX" id="BaU-Yb-6cW"/>
                <constraint firstItem="349-as-ryg" firstAttribute="top" secondItem="eZ4-YJ-qej" secondAttribute="bottom" constant="48" id="DO6-nh-p42"/>
                <constraint firstItem="t06-7j-ZU0" firstAttribute="top" secondItem="349-as-ryg" secondAttribute="bottom" constant="2" id="S35-n2-75Y"/>
                <constraint firstItem="zro-8R-n0h" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="dRF-2u-w55"/>
                <constraint firstItem="349-as-ryg" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="104" id="deN-SW-wFz"/>
                <constraint firstItem="t06-7j-ZU0" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="191" id="fbp-sx-1uf"/>
                <constraint firstItem="zro-8R-n0h" firstAttribute="centerX" secondItem="eZ4-YJ-qej" secondAttribute="centerX" id="iqx-p1-rno"/>
                <constraint firstItem="t06-7j-ZU0" firstAttribute="leading" secondItem="349-as-ryg" secondAttribute="leading" id="o2M-60-kXZ"/>
            </constraints>
            <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
        </view>
    </objects>
    <resources>
        <image name="exit_icon.png" width="512" height="512"/>
    </resources>
</document>
