<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10117" systemVersion="15G31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
    <dependencies>
        <deployment identifier="iOS"/>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
    </dependencies>
    <customFonts key="customFonts">
        <mutableArray key="Exo2-Bold.ttf">
            <string>Exo2-Bold</string>
        </mutableArray>
        <mutableArray key="Exo2-Regular.ttf">
            <string>Exo2-Regular</string>
            <string>Exo2-Regular</string>
            <string>Exo2-Regular</string>
            <string>Exo2-Regular</string>
        </mutableArray>
        <mutableArray key="Exo2-SemiBold.ttf">
            <string>Exo2-SemiBold</string>
        </mutableArray>
    </customFonts>
    <objects>
        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="RegisterViewController">
            <connections>
                <outlet property="btnExit" destination="j4Q-Rk-zVZ" id="RQd-Ue-lM9"/>
                <outlet property="btnRegister" destination="jie-vu-nAm" id="laH-s0-nk5"/>
                <outlet property="txtFirstName" destination="4Bs-8U-gTM" id="UGJ-C1-CiE"/>
                <outlet property="txtLastName" destination="uSj-ON-Rqb" id="fSI-XC-9tu"/>
                <outlet property="txtPassword" destination="LB8-Hp-m8h" id="zd0-iF-Fhf"/>
                <outlet property="txtUsername" destination="hq3-tc-Upy" id="gBu-Yb-8Lt"/>
                <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
            </connections>
        </placeholder>
        <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
        <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
            <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
            <subviews>
                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="USER REGISTER" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="saf-gp-y55">
                    <rect key="frame" x="126" y="54" width="124" height="21"/>
                    <fontDescription key="fontDescription" name="Exo2-Bold" family="Exo 2" pointSize="17"/>
                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                    <nil key="highlightedColor"/>
                </label>
                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="1jO-3y-AKv">
                    <rect key="frame" x="8" y="104" width="359" height="162"/>
                    <subviews>
                        <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="First Name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="4Bs-8U-gTM">
                            <rect key="frame" x="8" y="9" width="343" height="30"/>
                            <fontDescription key="fontDescription" name="Exo2-Regular" family="Exo 2" pointSize="14"/>
                            <textInputTraits key="textInputTraits"/>
                        </textField>
                        <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Last Name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="uSj-ON-Rqb">
                            <rect key="frame" x="8" y="47" width="343" height="30"/>
                            <fontDescription key="fontDescription" name="Exo2-Regular" family="Exo 2" pointSize="14"/>
                            <textInputTraits key="textInputTraits"/>
                        </textField>
                        <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Username" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="hq3-tc-Upy">
                            <rect key="frame" x="8" y="85" width="343" height="30"/>
                            <fontDescription key="fontDescription" name="Exo2-Regular" family="Exo 2" pointSize="14"/>
                            <textInputTraits key="textInputTraits"/>
                        </textField>
                        <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="LB8-Hp-m8h">
                            <rect key="frame" x="8" y="123" width="343" height="30"/>
                            <fontDescription key="fontDescription" name="Exo2-Regular" family="Exo 2" pointSize="14"/>
                            <textInputTraits key="textInputTraits" spellCheckingType="no" secureTextEntry="YES"/>
                        </textField>
                    </subviews>
                    <constraints>
                        <constraint firstItem="hq3-tc-Upy" firstAttribute="top" secondItem="uSj-ON-Rqb" secondAttribute="bottom" constant="8" symbolic="YES" id="9yg-25-Wbo"/>
                        <constraint firstItem="4Bs-8U-gTM" firstAttribute="trailing" secondItem="1jO-3y-AKv" secondAttribute="trailingMargin" id="AI9-Hw-HvB"/>
                        <constraint firstItem="hq3-tc-Upy" firstAttribute="leading" secondItem="LB8-Hp-m8h" secondAttribute="leading" id="Gc5-1l-gQM"/>
                        <constraint firstItem="4Bs-8U-gTM" firstAttribute="leading" secondItem="uSj-ON-Rqb" secondAttribute="leading" id="Lw9-xc-qQ3"/>
                        <constraint firstItem="uSj-ON-Rqb" firstAttribute="top" secondItem="4Bs-8U-gTM" secondAttribute="bottom" constant="8" symbolic="YES" id="Mba-dX-xya"/>
                        <constraint firstItem="4Bs-8U-gTM" firstAttribute="trailing" secondItem="uSj-ON-Rqb" secondAttribute="trailing" id="NlP-aG-sHM"/>
                        <constraint firstItem="4Bs-8U-gTM" firstAttribute="leading" secondItem="1jO-3y-AKv" secondAttribute="leadingMargin" id="Qqz-Gb-9mt"/>
                        <constraint firstItem="4Bs-8U-gTM" firstAttribute="top" secondItem="1jO-3y-AKv" secondAttribute="top" constant="9" id="eBM-JB-r3B"/>
                        <constraint firstItem="LB8-Hp-m8h" firstAttribute="top" secondItem="hq3-tc-Upy" secondAttribute="bottom" constant="8" symbolic="YES" id="gDQ-R6-NTA"/>
                        <constraint firstItem="uSj-ON-Rqb" firstAttribute="leading" secondItem="hq3-tc-Upy" secondAttribute="leading" id="l4P-A5-F63"/>
                        <constraint firstItem="hq3-tc-Upy" firstAttribute="trailing" secondItem="LB8-Hp-m8h" secondAttribute="trailing" id="qAF-uG-8iL"/>
                        <constraint firstAttribute="bottom" secondItem="LB8-Hp-m8h" secondAttribute="bottom" constant="9" id="vDr-eD-N4k"/>
                        <constraint firstItem="uSj-ON-Rqb" firstAttribute="trailing" secondItem="hq3-tc-Upy" secondAttribute="trailing" id="zdh-o7-NfI"/>
                    </constraints>
                </view>
                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jie-vu-nAm">
                    <rect key="frame" x="8" y="283" width="359" height="29"/>
                    <color key="backgroundColor" red="1" green="0.87505212970000001" blue="0.034291263689999997" alpha="1" colorSpace="calibratedRGB"/>
                    <fontDescription key="fontDescription" name="Exo2-SemiBold" family="Exo 2" pointSize="14"/>
                    <state key="normal" title="REGISTER">
                        <color key="titleColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                    </state>
                    <connections>
                        <action selector="btnRegisterClicked:" destination="-1" eventType="touchUpInside" id="767-bE-Y8X"/>
                    </connections>
                </button>
                <button opaque="NO" alpha="0.75" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="j4Q-Rk-zVZ">
                    <rect key="frame" x="168" y="596" width="38" height="38"/>
                    <constraints>
                        <constraint firstAttribute="height" constant="38" id="AFm-Oz-qQo"/>
                        <constraint firstAttribute="width" constant="38" id="YwY-tS-BJi"/>
                    </constraints>
                    <state key="normal" title="Button" image="exit_icon.png"/>
                    <connections>
                        <action selector="btnExitClicked:" destination="-1" eventType="touchUpInside" id="Y33-Z3-GSx"/>
                    </connections>
                </button>
            </subviews>
            <color key="backgroundColor" red="1" green="0.87505212970000001" blue="0.034291263689999997" alpha="1" colorSpace="calibratedRGB"/>
            <constraints>
                <constraint firstItem="1jO-3y-AKv" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leadingMargin" id="2WX-Qc-34u"/>
                <constraint firstItem="jie-vu-nAm" firstAttribute="centerX" secondItem="j4Q-Rk-zVZ" secondAttribute="centerX" id="59M-W0-Sgo"/>
                <constraint firstItem="1jO-3y-AKv" firstAttribute="trailing" secondItem="i5M-Pr-FkT" secondAttribute="trailingMargin" id="DrZ-OY-gpc"/>
                <constraint firstItem="jie-vu-nAm" firstAttribute="top" secondItem="1jO-3y-AKv" secondAttribute="bottom" constant="17" id="HQ2-Wz-Pjj"/>
                <constraint firstItem="saf-gp-y55" firstAttribute="centerX" secondItem="1jO-3y-AKv" secondAttribute="centerX" id="JA2-cG-7ef"/>
                <constraint firstItem="1jO-3y-AKv" firstAttribute="top" secondItem="saf-gp-y55" secondAttribute="bottom" constant="29" id="Qtt-JT-pOS"/>
                <constraint firstItem="saf-gp-y55" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="54" id="VWG-4q-sn3"/>
                <constraint firstItem="1jO-3y-AKv" firstAttribute="trailing" secondItem="jie-vu-nAm" secondAttribute="trailing" id="bRc-DE-7XZ"/>
                <constraint firstItem="1jO-3y-AKv" firstAttribute="leading" secondItem="jie-vu-nAm" secondAttribute="leading" id="dQi-T6-ysJ"/>
                <constraint firstAttribute="bottom" secondItem="j4Q-Rk-zVZ" secondAttribute="bottom" constant="33" id="vgn-6W-zD9"/>
            </constraints>
            <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
            <point key="canvasLocation" x="375.5" y="268.5"/>
        </view>
    </objects>
    <resources>
        <image name="exit_icon.png" width="512" height="512"/>
    </resources>
</document>
