...
        _txtLastName.text &&  _txtLastName.text.length >  0  &&
        _txtUsername.text &&  _txtUsername.text.length >  0  &&
        _txtPassword.text && _txtUsername.text.length  >  0) {
        return YES;
    }
    else {
        NSString *msgTitle = @"Info";
        NSString *msg = @"Please fill in all fields";
        [self showUIMessage:msg msgTitle:msgTitle];
        return NO;
    }
}

-(void)showUIMessage:(NSString *)msg msgTitle:(NSString *)msgTitle
{
    UIAlertController *alertController = [UIAlertController alertControllerWithTitle:msgTitle message:msg preferredStyle:UIAlertControllerStyleAlert];
    UIAlertAction* ok = [UIAlertAction actionWithTitle:@"OK" style:UIAlertActionStyleDefault handler:nil];
    [alertController addAction:ok];
    [self presentViewController:alertController animated:YES completion:nil];
}

-(void)hideKeyBoard
{
...
